# hbrace

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  linear_model.yaml  poe_model.yaml
data/: README.md
models/: checkpoint.pth
results/: sweep_beta_t_summary.json  sweep_beta_t_summary.yaml
results/sweep_beta_t_0.01/: config.yaml  stats.json
results/sweep_beta_t_0.05/: config.yaml  stats.json
results/sweep_beta_t_0.1/: config.yaml  stats.json
results/sweep_beta_t_0.2/: config.yaml  stats.json
results/sweep_beta_t_0.5/: config.yaml  stats.json
scripts/: dataset_summary.py  diagnose_causal_inference.py  diagnose_posterior.py  eval_causal_inference.py  eval_model.py  eval_model_with_optimal_threshold.py  eval_ppc.py  eval_ppc_gelman.py  evaluate_synthetic.py  posterior_predictive_checks.py  sweep_beta_t.py  test_sergio.py  train_vi.py
src/hbrace/: __init__.py  config.py
src/hbrace/data/: __init__.py  synthetic.py  types.py  utils.py
src/hbrace/guides/: __init__.py  hierarchical.py
src/hbrace/models/: __init__.py  causal_inference.py  guides.py  hbrace_model.py  hierarchical.py  hierarchical_1.5x.py  ppc.py  utils.py
src/hbrace/patient_data/: __init__.py  dataset.py  sergio_data.py  synthetic_data.py  types.py  utils.py
src/hbrace/training/: __init__.py  vi.py
src/hbrace/utils/: __init__.py  nb.py
